--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
 </head>
 <body>
     <h1 class="header">Youtube Mp3 Converter</h1>
@@ -12,5 +12,5 @@
     <button class="convert">Convert</button>
 
 </body>
-<script defer src="index.js"></script>
+<script  type="text/javascript" src="/js/index.js"></script>
 </html>
