--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1 class="header">Youtube Mp3 Converter</h1>
     <input class="URL-input" placeholder="URL">
-    <button class="convert">Convert</button>
+    <button class="convert">Convert to mp3</button>
+    <button class ="mp4">Convert to Video</button>
 
 </body>
 <script  type="text/javascript" src="/js/index.js"></script>
