--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube converter</title>
+    <title>Youtube Converter</title>
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
 </head>
 <body>
     <h1 class="header">Youtube Mp3 Converter</h1>
     <input class="URL-input" placeholder="URL">
-    <button class="convert">Convert to mp3</button>
-    <button class ="mp4">Convert to Video</button>
+    <div class="formatBtns">
+    <button class="mp3">Convert to mp3</button>
+    <button class ="mp4">Convert to mp4</button>
+    </div>
 
 </body>
 <script  type="text/javascript" src="/js/index.js"></script>
